Text decoration on navbar-links on mobile view fixed

--- a/style.css
+++ b/style.css
@@ -597,6 +597,7 @@ span.button-portfolio-disable {
 
   .navbar-links li a:hover {
     color: #1c202c;
+    text-decoration: none;
   }
 
   nav {
